only feature listings categories issue

--- a/www/en/focus/sample-focus.html
+++ b/www/en/focus/sample-focus.html
@@ -8,9 +8,9 @@
 
 <meta name="author" content="Someone">
 <meta name="dcterms.date" content="2023-11-03">
-<meta name="description" content="This is a sample page for a In Focus Brief.">
+<meta name="description" content="This is a sample page for an In Focus Brief.">
 
-<title>Home - In Focus</title>
+<title>Listings with profiles - In Focus</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -57,7 +57,7 @@ ul.task-list li input[type="checkbox"] {
 
 </head>
 
-<body class="nav-fixed">
+<body class="nav-fixed fullcontent">
 
 <div id="quarto-search-results"></div>
   <header id="quarto-header" class="headroom fixed-top">
@@ -65,19 +65,13 @@ ul.task-list li input[type="checkbox"] {
       <div class="navbar-container container-fluid">
       <div class="navbar-brand-container mx-auto">
     <a class="navbar-brand" href="../index.html">
-    <span class="navbar-title">Home</span>
+    <span class="navbar-title">Listings with profiles</span>
     </a>
   </div>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
   <span class="navbar-toggler-icon"></span>
 </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav navbar-nav-scroll me-auto">
-  <li class="nav-item">
-    <a class="nav-link" href="../documents.html"> 
-<span class="menu-text">Documents</span></a>
-  </li>  
-</ul>
             <ul class="navbar-nav navbar-nav-scroll ms-auto">
   <li class="nav-item">
     <a class="nav-link" href="../#lang-switcher"> 
@@ -94,9 +88,7 @@ ul.task-list li input[type="checkbox"] {
 <div id="quarto-content" class="quarto-container page-columns page-rows-contents page-layout-article page-navbar">
 <!-- sidebar -->
 <!-- margin-sidebar -->
-    <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-        
-    </div>
+    
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
@@ -110,7 +102,7 @@ ul.task-list li input[type="checkbox"] {
 
 <div>
   <div class="description">
-    This is a sample page for a In Focus Brief.
+    This is a sample page for an In Focus Brief.
   </div>
 </div>
 
