added theme toggle issue

--- a/www/announcements/sample-announcement.html
+++ b/www/announcements/sample-announcement.html
@@ -8,9 +8,9 @@
 
 <meta name="author" content="Someone">
 <meta name="dcterms.date" content="2023-11-03">
-<meta name="description" content="This is a sample page for an announcement.">
+<meta name="description" content="?meta:post_descr.sample-announcement">
 
-<title>Listings with profiles - Announcement</title>
+<title>?meta:post_title.sample-announcement</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -65,29 +65,7 @@ ul.task-list li input[type="checkbox"] {
   <header id="quarto-header" class="headroom fixed-top">
     <nav class="navbar navbar-expand-lg " data-bs-theme="dark">
       <div class="navbar-container container-fluid">
-      <div class="navbar-brand-container mx-auto">
-    <a class="navbar-brand" href="../index.html">
-    <span class="navbar-title">Listings with profiles</span>
-    </a>
-  </div>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
-  <span class="navbar-toggler-icon"></span>
-</button>
-          <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav navbar-nav-scroll me-auto">
-  <li class="nav-item">
-    <a class="nav-link" href="../index.html"> 
-<span class="menu-text">Home</span></a>
-  </li>  
-</ul>
-            <ul class="navbar-nav navbar-nav-scroll ms-auto">
-  <li class="nav-item">
-    <a class="nav-link" href="../#lang-switcher"> 
-<span class="menu-text">Français</span></a>
-  </li>  
-</ul>
-          </div> <!-- /navcollapse -->
-          <div class="quarto-navbar-tools">
+        <div class="quarto-navbar-tools">
   <a href="" class="quarto-color-scheme-toggle quarto-navigation-tool  px-1" onclick="window.quartoToggleColorScheme(); return false;" title="Toggle dark mode"><i class="bi"></i></a>
 </div>
       </div> <!-- /container-fluid -->
@@ -103,7 +81,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Announcement</h1>
+<h1 class="title"><strong>?meta:post_title.sample-announcement</strong></h1>
   <div class="quarto-categories">
     <div class="quarto-category"><strong>?meta:categories.announcement</strong></div>
   </div>
@@ -111,7 +89,7 @@ ul.task-list li input[type="checkbox"] {
 
 <div>
   <div class="description">
-    This is a sample page for an announcement.
+    <strong>?meta:post_descr.sample-announcement</strong>
   </div>
 </div>
 
@@ -140,19 +118,6 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<div class="callout callout-style-default callout-note callout-titled">
-<div class="callout-header d-flex align-content-center">
-<div class="callout-icon-container">
-<i class="callout-icon"></i>
-</div>
-<div class="callout-title-container flex-fill">
-Note
-</div>
-</div>
-<div class="callout-body-container callout-body">
-<p>This is a sample page for an announcement.</p>
-</div>
-</div>
 
 
 
